# bmpoly

./: Cargo.toml  colors.txt  lakes.txt  seas.txt
examples/: test.rs
src/: border_segment.rs  eu4.rs  lib.rs  main.rs  polygon.rs  province.rs
