[package]
name = "bmpoly"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bmp = "0.5.0"
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
earcutr = "0.4.3"
fastrand = "2.0.1"
bevy_pancam = "*"