[package]
name = "bmpoly"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bmp = "0.5.0"
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
earcutr = "0.4.3"
fastrand = "2.0.1"
bevy_pancam = "0.10.0"
bevy_mod_raycast = "0.16.0"
bevy_polyline2d = { git = "https://github.com/JENebel/bevy_2d_polyline.git" }